[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-starter-temp-dannyJack"
version = "0.0.1"
authors = [
    { name="Daniel Cisneros", email="work.dcisneros@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Licence :: OSI Approved :: MIT Licence",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dannyJack/python-starter-temp.git"
"Bug Tracker" = "https://github.com/dannyJack/python-starter-temp.git/issues"